Fix mobile background overlap

--- a/styles/sass/ui/positioning.scss
+++ b/styles/sass/ui/positioning.scss
@@ -4,6 +4,12 @@
     background-size: cover;
 }
 
+.static-image {
+    position: absolute;
+    top: 0;
+    z-index: -1;
+}
+
 .object-cover {
     object-fit: cover; 
     object-position: top center; 
